--- a/1styles.css
+++ b/1styles.css
@@ -1,16 +1,28 @@
-:root{
-    --branco-principal: #FFFFFF;
-    --cinza-secundario: #C0C0C0;
-    --botão-azul: #167BF7;
-    --cor-de-fundo: #00030C;
-    --fonte-principal:'inter';
-    --botão-azul-efeito:#3c92fa;
+.Titulo 
+{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    font-size: 30px;
+    color:beige
 }
 
-body{
-    background-color: var(--cor-de-fundo);
-    color: var(--branco-principal);
-    font-family: var(--fonte-principal);
-    font-size:16px ;
-    font-weight: 400;
+.Fundo{
+    background-color: rgb(84, 89, 90);
+}
+
+.filme{
+    width: 30%;
+    
+    text-align: center;
+}
+
+.subtitulos{
+    text-align:center;
+    color: beige;
+    font-size: 30px;
+}
+
+.container{
+   
 }
